<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    tools:context="com.a6studios.kruti.package_OTPVerification.OTPVerificationActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundrect"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_centerVertical="true"
        android:textColor="@color/colorSecondaryDark"
        android:id="@+id/id_phoneNumber"
        android:inputType="phone"
        android:hint="@string/enter_phone_number"
        android:textAlignment="center"
        android:padding="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundrect"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_centerVertical="true"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/id_phoneNumber"
        android:textColor="@color/colorSecondaryDark"
        android:inputType="number"
        android:maxLength="6"
        android:id="@+id/id_OTP"
        android:hint="@string/enter_otp"
        android:textAlignment="center"
        android:padding="5dp"/>

    <Button
        android:id="@+id/btn_verify_otp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_OTP"
        android:background="@drawable/roundrect2"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:text="@string/verify_otp_button"/>

</RelativeLayout>
